# practice

./: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  Jenkinsfile  JenkinsfileDocker  README.md  date.cpp  main.cpp
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  date.cpp  date.hpp
tests/: CMakeLists.txt  tests.cpp
